Add upload img, config build directly to backend public

--- a/src/assets/styles/basics/helpers.scss
+++ b/src/assets/styles/basics/helpers.scss
@@ -620,3 +620,11 @@ select {
     }
   }
 }
+
+.box-shadow {
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
+}
+
+.white-outline {
+  outline: 1px solid $white;
+}
