Add basic LineChart

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -46,9 +46,9 @@
 @import '../../components/WeightCard/styles/WeightCard.scss';
 @import '../../components/BmrCard/styles/BmrCard.scss';
 @import '../../components/EditUser/styles/EditUser.scss';
+@import '../../components/LineChart/styles/LineChart.scss';
 
 @import '../../CustomMui/SignIn/styles/SignIn.scss';
-
 @import '../../CustomMui/BottomNavigation/styles/FixedBottomNavigation.scss';
 @import '../../CustomMui/CustomToggle/styles/CustomToggle.scss';
 @import '../../CustomMui/CustomInput/styles/CustomInput.scss';
