Add a more advanced chart filtering by weight createdAt

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -47,6 +47,8 @@
 @import '../../components/BmrCard/styles/BmrCard.scss';
 @import '../../components/EditUser/styles/EditUser.scss';
 @import '../../components/LineChart/styles/LineChart.scss';
+@import '../../components/LineChart/styles/LineChartControls.scss';
+@import '../../components/WeightChart/styles/WeightChart.scss';
 
 @import '../../CustomMui/SignIn/styles/SignIn.scss';
 @import '../../CustomMui/BottomNavigation/styles/FixedBottomNavigation.scss';
