--- a/src/components/WeightChart/styles/WeightChart.scss
+++ b/src/components/WeightChart/styles/WeightChart.scss
@@ -12,14 +12,21 @@
 
     gap: 0.5rem;
 
-    .title {
-      margin: 0;
-      font-size: 2rem;
-      font-weight: 600;
+    .weight-container {
+      display: flex;
+      align-items: end;
+      justify-content: center;
+      gap: 0.5rem;
 
-      .kg {
-        font-size: 1.5rem;
-        font-weight: 400;
+      .title {
+        margin: 0;
+        font-size: 2rem;
+        font-weight: 600;
+
+        .kg {
+          font-size: 1.5rem;
+          font-weight: 400;
+        }
       }
     }
   }
