Move Profile logic to it's own cmp, add icon support to CustomAccordion

--- a/src/CustomMui/CustomAccordion/styles/CustomAccordion.scss
+++ b/src/CustomMui/CustomAccordion/styles/CustomAccordion.scss
@@ -1,6 +1,10 @@
 .custom-accordion {
   width: 100%;
 
+  .accordion-icon {
+    margin-right: 0.8rem;
+  }
+
   &.dark-mode {
     .MuiPaper-root.dark-mode {
       background-color: $darker-gray;
