--- a/src/components/WeightChart/styles/WeightChart.scss
+++ b/src/components/WeightChart/styles/WeightChart.scss
@@ -1,16 +1,22 @@
 .weight-chart {
   margin-top: 1rem;
+
   display: grid;
   grid-template-rows: auto 1fr;
   gap: 0.8rem;
+
+  .card.weight {
+    padding: 0rem 1rem;
+    height: fit-content;
+    padding: 1rem;
+  }
 
   .header {
     display: grid;
     align-items: center;
     justify-items: start;
-    gap: 0.5rem;
-
-    padding: 0 0.5rem;
+    gap: 1rem;
+    margin-bottom: 1rem;
 
     .weight-container {
       display: flex;
@@ -22,19 +28,48 @@
         margin: 0;
         font-size: 2rem;
         font-weight: 600;
+        display: flex;
+        align-items: center;
+        gap: 0.5rem;
+
+        svg {
+          width: 2rem;
+          height: 2rem;
+        }
 
         .kg {
-          font-size: 1.5rem;
+          font-size: 1.3rem;
           font-weight: 400;
+          align-self: end;
+        }
+      }
+      .message {
+        display: flex;
+        align-items: center;
+        gap: 0.2rem;
+
+        svg {
+          width: 0.3rem;
+          height: 0.3rem;
         }
       }
     }
   }
 
+  .date-container {
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
+
+    .times-container {
+      margin: 0;
+    }
+  }
+
   .chart-container {
     canvas {
-      width: 90vw !important;
-      height: calc(90vw * 0.5) !important;
+      width: 85vw !important;
+      height: calc(85vw * 0.5) !important;
     }
   }
 }
