Add several icons across the app

--- a/src/components/CurrMeal/styles/CurrMeal.scss
+++ b/src/components/CurrMeal/styles/CurrMeal.scss
@@ -7,11 +7,18 @@
   .custom-list {
     overflow: auto;
   }
+
+  .label-container {
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
+  }
 }
 
 .curr-meal .header {
   display: flex;
   align-items: baseline;
+  align-items: center;
   justify-content: space-between;
 }
 
