Add no scroll when modal open

--- a/src/assets/styles/basics/base.scss
+++ b/src/assets/styles/basics/base.scss
@@ -32,6 +32,13 @@ body {
     }
   }
 
+  &:has(.MuiDialog-root) {
+    .page-container,
+    .main {
+      overflow: hidden !important;
+    }
+  }
+
   overflow: hidden;
 
   width: 100%;
