Add favorite color to CustomButton

--- a/src/assets/styles/basics/helpers.scss
+++ b/src/assets/styles/basics/helpers.scss
@@ -213,7 +213,7 @@ select {
       color: $white;
 
       &.Mui-active {
-        color: $primary-color;
+        // color: $primary-color;
       }
     }
   }
