--- a/src/assets/styles/basics/helpers.scss
+++ b/src/assets/styles/basics/helpers.scss
@@ -363,8 +363,8 @@ select {
 .MuiFab-root,
 .MuiPickersDay-root.Mui-selected,
 .custom-date-picker-button {
-  background-color: $primary-color !important;
-  color: $white;
+  // background-color: $primary-color !important;
+  // color: $white;
 
   &.primary {
     background-color: $primary-color !important;
