--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -61,6 +61,7 @@
 @import '../../CustomMui/CustomAccordion/styles/CustomAccordion.scss';
 @import '../../CustomMui/CustomButton/styles/CustomButton.scss';
 @import '../../CustomMui/CustomDatePicker/styles/CustomDatePicker.scss';
+@import '../../CustomMui/CustomStepper/styles/CustomStepper.scss';
 
 @import 'react-circular-progressbar/dist/styles.css';
 @import 'rc-slider/assets/index.css';
