--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -50,6 +50,7 @@
 @import '../../components/LineChart/styles/LineChartControls.scss';
 @import '../../components/WeightChart/styles/WeightChart.scss';
 @import '../../components/ProfileCard/styles/ProfileCard.scss';
+@import '../../components/GoalsCard/styles/GoalsCard.scss';
 
 @import '../../CustomMui/SignIn/styles/SignIn.scss';
 @import '../../CustomMui/BottomNavigation/styles/FixedBottomNavigation.scss';
