Add basic CustomStepper to EditGoal

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -51,6 +51,7 @@
 @import '../../components/WeightChart/styles/WeightChart.scss';
 @import '../../components/ProfileCard/styles/ProfileCard.scss';
 @import '../../components/GoalsCard/styles/GoalsCard.scss';
+@import '../../components/EditGoal/styles/EditGoal.scss';
 
 @import '../../CustomMui/SignIn/styles/SignIn.scss';
 @import '../../CustomMui/BottomNavigation/styles/FixedBottomNavigation.scss';
