--- a/src/components/EditGoal/styles/EditGoal.scss
+++ b/src/components/EditGoal/styles/EditGoal.scss
@@ -1,3 +1,14 @@
 .edit-goal-container {
   padding: 1rem;
+  height: 100%;
+
+  .custom-stepper-stage {
+    height: 360px;
+  }
+
+  .animation-container {
+    justify-self: center;
+    width: 300px;
+    height: 300px;
+  }
 }
