--- a/src/components/WeightCard/styles/WeightCard.scss
+++ b/src/components/WeightCard/styles/WeightCard.scss
@@ -4,7 +4,7 @@
   grid-template-columns: repeat(2, 1fr);
   align-items: center;
   justify-items: center;
-  gap: 1rem;
+  // gap: 0.2rem;
 
   .date-text {
     grid-column: 1 / 2;
@@ -40,5 +40,13 @@
   .update-weight-button-container {
     grid-column: 1 / -1;
     // grid-row: 2;
+  }
+
+  .animation-container {
+    grid-column: 1 / -1;
+    grid-row: 3;
+    width: 180px;
+    height: 180px;
+    justify-self: center;
   }
 }
