--- a/src/components/WeightCard/styles/WeightCard.scss
+++ b/src/components/WeightCard/styles/WeightCard.scss
@@ -22,6 +22,7 @@
     grid-row: 2;
 
     .weight-text {
+      margin-top: 0.5rem;
       font-size: 1.8rem;
       font-weight: 600;
       display: flex;
