--- a/src/components/EditGoal/styles/EditGoal.scss
+++ b/src/components/EditGoal/styles/EditGoal.scss
@@ -28,4 +28,26 @@
       border-radius: 25px;
     }
   }
+
+  .macros-stage-container {
+    display: grid;
+    // grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
+    grid-template-columns: 1fr 1fr;
+    gap: 2em 1rem;
+    margin: 1rem 0;
+    justify-items: center;
+
+    .macros {
+      grid-row: 1/2;
+      grid-column: 2/3;
+    }
+
+    .buttons-container {
+      grid-row: 2/3;
+      grid-column: 1/3;
+      display: grid;
+      grid-auto-flow: column;
+      gap: 1rem;
+    }
+  }
 }
