--- a/src/components/EditGoal/styles/EditGoal.scss
+++ b/src/components/EditGoal/styles/EditGoal.scss
@@ -35,7 +35,19 @@
     grid-template-columns: 1fr 1fr;
     gap: 2em 1rem;
     margin: 1rem 0;
-    justify-items: center;
+    // justify-items: center;
+
+    .edit-header-container {
+      grid-column: 1/3;
+      display: grid;
+      grid-template-columns: 1fr auto;
+      gap: 0.5rem;
+      align-items: center;
+
+      .divider {
+        grid-column: 1/-1;
+      }
+    }
 
     .macros {
       grid-row: 1/2;
@@ -43,11 +55,39 @@
     }
 
     .buttons-container {
-      grid-row: 2/3;
+      // grid-row: 2/3;
       grid-column: 1/3;
       display: grid;
       grid-auto-flow: column;
+      // justify-items: start;
       gap: 1rem;
+    }
+  }
+
+  .edit-header-container {
+    display: grid;
+
+    align-items: center;
+
+    gap: 0.5rem;
+
+    .date-picker-container {
+      display: grid;
+      grid-template-columns: 100px 1fr auto;
+      align-items: center;
+      justify-content: start;
+      // gap: 0.5rem;
+    }
+  }
+
+  .animation-container {
+    margin-left: 1.5rem;
+    &.date {
+      svg {
+        width: 300px;
+        height: 300px;
+      }
+      // height: 300px;
     }
   }
 }
