--- a/src/CustomMui/SignIn/styles/SignIn.scss
+++ b/src/CustomMui/SignIn/styles/SignIn.scss
@@ -36,6 +36,7 @@
         color: $dark-gray;
 
         &.Mui-checked {
+          background-color: $primary-color;
           color: $white;
         }
       }
@@ -65,6 +66,7 @@
         color: $white;
 
         &.Mui-checked {
+          background-color: $primary-color;
           color: $white;
         }
       }
