--- a/src/components/EditGoal/styles/EditGoal.scss
+++ b/src/components/EditGoal/styles/EditGoal.scss
@@ -73,10 +73,39 @@
 
     .date-picker-container {
       display: grid;
-      grid-template-columns: 100px 1fr auto;
+      grid-template-columns: 40px 100px 1fr auto;
       align-items: center;
       justify-content: start;
       // gap: 0.5rem;
+
+      h6:first-of-type {
+        // grid-column: 2/3;
+      }
+
+      .end-date-label,
+      .start-date-label {
+        grid-column: 2/3;
+        font-size: 1.2rem;
+      }
+      &.disabled {
+        label {
+          color: $medium-gray !important;
+        }
+        &.dark-mode {
+          label {
+            color: $medium-gray !important;
+            opacity: 0.5;
+          }
+        }
+      }
+
+      h6 {
+        grid-column: 3/4;
+      }
+
+      .custom-button-wrapper {
+        grid-column: 4/5;
+      }
     }
   }
 
