Remove unwanted variables

--- a/src/pages/Progress/styles/Progress.scss
+++ b/src/pages/Progress/styles/Progress.scss
@@ -1,6 +1,6 @@
 .progress-container {
-  display: grid;
-  gap: 1rem;
+  // display: grid;
+  // gap: 1rem;
 
   //   .goals-card {
   //     height: 100%;
