Add previous day logs to progress based on selected date

--- a/src/components/ItemDetails/styles/ItemDetails.scss
+++ b/src/components/ItemDetails/styles/ItemDetails.scss
@@ -48,6 +48,12 @@
     }
   }
 
+  &.no-edit {
+    .header {
+      grid-template-rows: repeat(2, auto);
+    }
+  }
+
   .content {
     display: grid;
     gap: 1rem;
