--- a/src/pages/Progress/styles/Progress.scss
+++ b/src/pages/Progress/styles/Progress.scss
@@ -1,8 +1,71 @@
 .progress-container {
-  // display: grid;
-  // gap: 1rem;
+  overflow-y: hidden;
+  display: grid;
+  gap: 1rem;
 
   //   .goals-card {
   //     height: 100%;
   //   }
+
+  .logged-today-card {
+    height: 100%;
+    overflow-y: auto;
+    padding: 0px;
+
+    .header-container {
+      position: sticky;
+      top: 0;
+      left: 0;
+      right: 0;
+      background-color: $white;
+      z-index: 10;
+      width: 100%;
+      text-align: start;
+      padding: 1rem 1rem 0 1rem;
+
+      &.dark-mode {
+        background-color: $darker-gray;
+      }
+
+      display: grid;
+      grid-template-columns: auto auto 1fr;
+
+      align-items: center;
+      gap: 0.5rem;
+
+      h5 {
+        grid-row: 1 / -1;
+        grid-column: 2 / 3;
+      }
+
+      h6 {
+        grid-column: 3/4;
+        justify-self: end;
+        opacity: 0.8;
+      }
+
+      .divider {
+        grid-column: 1 / -1;
+        grid-row: 3;
+      }
+    }
+
+    .MuiTypography-caption {
+      align-self: end;
+      opacity: 0.8;
+      font-size: 0.9rem;
+      grid-column: 2 / -1;
+    }
+  }
+
+  .custom-list-item {
+    // padding-left: 2rem;
+
+    img {
+      width: 40px;
+      height: 40px;
+      object-fit: cover;
+      border-radius: 50%;
+    }
+  }
 }
