--- a/src/assets/styles/basics/base.scss
+++ b/src/assets/styles/basics/base.scss
@@ -40,7 +40,9 @@ body {
     }
   }
 
-  overflow: hidden;
+  main {
+    overflow-y: hidden !important;
+  }
 
   width: 100%;
   height: 100%;
@@ -48,7 +50,7 @@ body {
   // min-width: 100vw;
   min-height: 100vh;
   height: 100vh;
-  overflow: hidden;
+  overflow: hidden !important;
 
   // background-color: $neutral-gray;
 
