--- a/src/pages/Dashboard/styles/Dashboard.scss
+++ b/src/pages/Dashboard/styles/Dashboard.scss
@@ -1,5 +1,6 @@
 .dashboard-container {
+  overflow-y: hidden !important;
   display: grid;
-  grid-template-rows: auto 1fr;
+  // grid-template-rows: auto 1fr;
   // gap: 1rem;
 }
