--- a/src/components/ItemSearch/styles/ItemSearch.scss
+++ b/src/components/ItemSearch/styles/ItemSearch.scss
@@ -24,10 +24,20 @@
     display: grid;
     align-items: start;
     grid-template-rows: repeat(2, auto);
+    grid-template-columns: 1fr auto;
     gap: 1rem;
 
     &.dark-mode {
       background: $darker-gray;
+    }
+
+    .input-container {
+      grid-column: 1/-1;
+    }
+
+    .custom-button-wrapper {
+      grid-column: 2/3;
+      align-self: center;
     }
   }
 
