--- a/src/components/MacrosProgress/styles/EditComponent.scss
+++ b/src/components/MacrosProgress/styles/EditComponent.scss
@@ -25,6 +25,10 @@
       display: grid;
       gap: 0.8rem;
       justify-items: center;
+
+      .custom-button {
+        font-size: 1.2rem;
+      }
     }
 
     .banner {
