--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -64,6 +64,7 @@
 @import '../../CustomMui/CustomButton/styles/CustomButton.scss';
 @import '../../CustomMui/CustomDatePicker/styles/CustomDatePicker.scss';
 @import '../../CustomMui/CustomStepper/styles/CustomStepper.scss';
+@import '../../CustomMui/CustomAlertDialog/styles/CustomAlertDialog.scss';
 
 @import 'react-circular-progressbar/dist/styles.css';
 @import 'rc-slider/assets/index.css';
