--- a/src/components/ItemDetails/styles/ItemDetails.scss
+++ b/src/components/ItemDetails/styles/ItemDetails.scss
@@ -37,7 +37,8 @@
     .subtitle {
       grid-column: 2/3;
       grid-row: 2/3;
-      color: var(--muted-foreground, #666);
+      // color: var(--muted-foreground, #666);
+      opacity: 0.7;
       font-size: 0.95rem;
     }
 
@@ -110,6 +111,22 @@
         }
       }
     }
+  }
+}
+
+.modal-image-container {
+  padding: 1rem;
+  display: grid;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  width: 100%;
+  min-width: 250px;
+
+  img {
+    width: 200px;
+    height: 200px;
+    object-fit: cover;
   }
 }
 
