--- a/src/assets/styles/basics/helpers.scss
+++ b/src/assets/styles/basics/helpers.scss
@@ -827,3 +827,39 @@ select {
     }
   }
 }
+
+// Gradient Background setup
+.gradient-background {
+  position: relative;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  &::before {
+    content: '';
+    display: block;
+    position: absolute;
+    // z-index: -1;
+    inset: 0;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-image: radial-gradient(
+      ellipse at 50% 50%,
+      hsl(174, 45%, 75%),
+      hsl(0, 0%, 100%)
+    );
+    background-repeat: no-repeat;
+  }
+
+  &.dark-mode {
+    &::before {
+      background-image: radial-gradient(
+        at 50% 50%,
+        hsla(174, 100%, 25%, 0.6),
+        hsl(200, 40%, 5%)
+      );
+    }
+  }
+}
