Modify macros distribution edit cmp width

--- a/src/components/MacrosDistribution/styles/EditComponent.scss
+++ b/src/components/MacrosDistribution/styles/EditComponent.scss
@@ -1,14 +1,14 @@
-.edit-macros-container.distribution {
-  display: grid;
-  gap: 0.8rem;
+// .edit-macros-container.distribution {
+//   display: grid;
+//   gap: 0.8rem;
 
-  justify-self: center;
-  margin-top: 1em;
-  width: 300px;
+//   justify-self: center;
+//   margin-top: 1em;
+//   width: 300px;
 
-  .macro-title {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
-}
+//   .macro-title {
+//     display: flex;
+//     justify-content: space-between;
+//     align-items: center;
+//   }
+// }
