--- a/src/CustomMui/BottomNavigation/styles/FixedBottomNavigation.scss
+++ b/src/CustomMui/BottomNavigation/styles/FixedBottomNavigation.scss
@@ -83,8 +83,8 @@
   box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
 
   .MuiButtonBase-root {
-    background-color: $primary-color;
-    color: $white;
+    // background-color: $primary-color;
+    // color: $white;
   }
 }
 .MuiSpeedDial-root {
