--- a/src/components/BarcodeScanner/styles/BarcodeScanner.scss
+++ b/src/components/BarcodeScanner/styles/BarcodeScanner.scss
@@ -25,10 +25,14 @@
 
   .animation-container {
     position: absolute;
-    top: 1em;
-    bottom: 1em;
-    left: 1em;
-    right: 1em;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    // top: 1em;
+    // bottom: 1em;
+    // left: 1em;
+    // right: 1em;
     img {
       border-radius: 12px;
       width: 100%;
@@ -42,8 +46,8 @@
     position: absolute;
     top: 50%;
     left: 50%;
-    width: 70%;
-    height: 30%;
+    width: 90%;
+    height: 40%;
     transform: translate(-50%, -50%);
     border: 2px solid rgba(255, 255, 255, 0.6);
     border-radius: 8px;
