Move ColorPicker to it's onw file

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -52,6 +52,7 @@
 @import '../../components/ProfileCard/styles/ProfileCard.scss';
 @import '../../components/GoalsCard/styles/GoalsCard.scss';
 @import '../../components/EditGoal/styles/EditGoal.scss';
+@import '../../components/ColorPicker/styles/ColorPicker.scss';
 
 @import '../../CustomMui/SignIn/styles/SignIn.scss';
 @import '../../CustomMui/BottomNavigation/styles/FixedBottomNavigation.scss';
