--- a/src/components/WeightChart/styles/WeightChart.scss
+++ b/src/components/WeightChart/styles/WeightChart.scss
@@ -17,6 +17,17 @@
     justify-items: start;
     gap: 1rem;
     margin-bottom: 1rem;
+    position: relative;
+
+    .setting-button-container {
+      position: absolute;
+      right: 0;
+      top: 0;
+      svg {
+        width: 1.8rem;
+        height: 1.8rem;
+      }
+    }
 
     .weight-container {
       display: flex;
