--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -53,6 +53,7 @@
 @import '../../components/GoalsCard/styles/GoalsCard.scss';
 @import '../../components/EditGoal/styles/EditGoal.scss';
 @import '../../components/ColorPicker/styles/ColorPicker.scss';
+@import '../../components/WeightChart/styles/WeightChartSettings.scss';
 
 @import '../../CustomMui/SignIn/styles/SignIn.scss';
 @import '../../CustomMui/BottomNavigation/styles/FixedBottomNavigation.scss';
