--- a/src/components/EditMeal/styles/EditMeal.scss
+++ b/src/components/EditMeal/styles/EditMeal.scss
@@ -47,6 +47,12 @@
       // margin-bottom: 1rem;
     }
 
+    .buttons-container {
+      display: grid;
+      grid-auto-flow: column;
+      gap: 1rem;
+    }
+
     .animation-container {
       justify-self: center;
       width: 300px;
