Add ellipsis styling to primary list item text

--- a/src/CustomMui/CustomList/styles/CustomList.scss
+++ b/src/CustomMui/CustomList/styles/CustomList.scss
@@ -37,6 +37,12 @@
         }
       }
     }
+
+    .MuiListItemText-primary {
+      overflow-x: hidden;
+      text-overflow: ellipsis;
+      white-space: nowrap;
+    }
   }
 
   .drag-handle {
