--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -15,6 +15,7 @@
 @import '../../pages/Diary/styles/Diary.scss';
 @import '../../pages/Progress/styles/Progress.scss';
 @import '../../pages/UserDetails/styles/UserDetails.scss';
+@import '../../pages/PwaInstall/styles/PwaInstall.scss';
 
 @import '../../components/AppHeader/styles/AppHeader.scss';
 @import '../../components/AppFooter/styles/AppFooter.scss';
