--- a/src/pages/PwaInstall/styles/PwaInstall.scss
+++ b/src/pages/PwaInstall/styles/PwaInstall.scss
@@ -15,9 +15,16 @@
     text-align: center;
   }
 
-  .download-animation {
-    justify-self: center;
-    width: 280px;
-    height: 280px;
+  .install-container {
+    display: grid;
+    justify-items: center;
+    align-items: center;
+    gap: 1rem;
+
+    .download-animation {
+      justify-self: center;
+      width: 280px;
+      height: 280px;
+    }
   }
 }
