Add app selection functionality to AppHeader component and update styles for dark mode support, add app to system store and Apps type

--- a/src/assets/styles/basics/helpers.scss
+++ b/src/assets/styles/basics/helpers.scss
@@ -869,3 +869,13 @@ select {
   text-overflow: ellipsis;
   white-space: nowrap;
 }
+
+.app-name {
+  font-size: 1.8rem;
+  font-weight: 800;
+  color: $primary-color;
+
+  &.dark-mode {
+    color: $white;
+  }
+}
