--- a/src/components/AppHeader/styles/AppHeader.scss
+++ b/src/components/AppHeader/styles/AppHeader.scss
@@ -15,6 +15,10 @@
 
   &.dark-mode {
     background-color: $primary-color-darker;
+
+    svg {
+      color: $white;
+    }
   }
   img {
     height: $header-height;
