Add basic rendering of muscle groups card

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -56,6 +56,8 @@
 @import '../../components/ColorPicker/styles/ColorPicker.scss';
 @import '../../components/WeightChart/styles/WeightChartSettings.scss';
 
+@import '../../components/LiftMate/MuscleGroupCard/styles/MuscleGroupCard.scss';
+
 @import '../../CustomMui/SignIn/styles/SignIn.scss';
 @import '../../CustomMui/BottomNavigation/styles/FixedBottomNavigation.scss';
 @import '../../CustomMui/CustomToggle/styles/CustomToggle.scss';
