Add basic EditWorkout skeleton with CustomStepper

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -16,6 +16,7 @@
 @import '../../pages/MyTracker/Progress/styles/Progress.scss';
 @import '../../pages/UserDetails/styles/UserDetails.scss';
 @import '../../pages/PwaInstall/styles/PwaInstall.scss';
+@import '../../pages/LiftMate/EditWorkout/styles/EditWorkout.scss';
 
 @import '../../components/AppHeader/styles/AppHeader.scss';
 @import '../../components/AppFooter/styles/AppFooter.scss';
@@ -57,6 +58,7 @@
 @import '../../components/WeightChart/styles/WeightChartSettings.scss';
 
 @import '../../components/LiftMate/MuscleGroupCard/styles/MuscleGroupCard.scss';
+@import '../../pages/LiftMate/EditWorkout/styles/EditWorkout.scss';
 
 @import '../../CustomMui/SignIn/styles/SignIn.scss';
 @import '../../CustomMui/BottomNavigation/styles/FixedBottomNavigation.scss';
